--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>PAZ DG</title>
+    <title>Creative - Start Bootstrap Theme</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -113,7 +113,7 @@ Creamos identidades de marca, logotipos, piezas digitales e impresas
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
-              <i class="fas fa-globe-americas text-primary mb-3 sr-icon-3"></i>
+              <i class="fas fa-4x fa-code text-primary mb-3 sr-icon-3"></i>
               <h3 class="mb-3">PÁGINAS WEB.</h3>
               <p class="text-muted mb-0">HTML, CSS3, javascript. Diseño responsivo. Diseño en Wordpress.</p>
             </div>
