--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Creative - Start Bootstrap Theme</title>
+    <title>PAZ DG</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -97,7 +97,7 @@
         <div class="row">
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
-              <i class="fas fa-4x fa-gem text-primary mb-3 sr-icon-1"></i>
+              <i class="fas fa-4x fa-pen-nib text-primary mb-3 sr-icon-1"></i>
               <h3 class="mb-3">BRANDING</h3>
               <p class="text-muted mb-0"> 
 Creamos identidades de marca, logotipos, piezas digitales e impresas
@@ -106,14 +106,14 @@ Creamos identidades de marca, logotipos, piezas digitales e impresas
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
-              <i class="fas fa-4x fa-paper-plane text-primary mb-3 sr-icon-2"></i>
+              <i class="fas fa-4x fa-thumbs-up text-primary mb-3 sr-icon-2"></i>
               <h3 class="mb-3">SOCIAL MEDIA</h3>
               <p class="text-muted mb-0">Estrategias digitales para redes sociales con creatividad de contenido.</p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
-              <i class="fas fa-4x fa-code text-primary mb-3 sr-icon-3"></i>
+              <i class="fas fa-4x fa-laptop-code text-primary mb-3 sr-icon-3"></i>
               <h3 class="mb-3">PÁGINAS WEB.</h3>
               <p class="text-muted mb-0">HTML, CSS3, javascript. Diseño responsivo. Diseño en Wordpress.</p>
             </div>
